--- a/index.html
+++ b/index.html
@@ -177,39 +177,55 @@
             <div class="row">
 				 <div class="col-md-12">
 					<!--p class="lead">RWBC-OIL ラボ長　松岡 聡（東京工業大学 教授）<a href="#" class="btn btn-warning">ラボ長挨拶</a><br-->
-					<p class="lead">RWBC-OIL ラボ長　横井 一仁（産業技術総合研究所 情報・人間工学領域研究戦略部 部長）<a href="#" class="btn btn-warning">ラボ長挨拶</a><br>
+					<p class="lead">RWBC-OIL ラボ長　横井 一仁（産業技術総合研究所 研究戦略部長）<a href="#" class="btn btn-warning">ラボ長挨拶</a><br>
 					RWBC-OIL 副ラボ長　小川 宏高（産業技術総合研究所 研究チーム長）</a><br>
-					RWBC-OIL 副ラボ長　遠藤 敏夫 教授（東工大）</p>
+					RWBC-OIL 副ラボ長　遠藤 敏夫（東京工業大学 教授）</p>
 
 
 					<h3>実社会HPC班</h3>
 					<p class="lead">
-					  班長 高野 了成 （産総研 研究グループ長）<br>
-					  松岡 聡 教授（東工大）<br>
+					  班長 高野 了成 （産総研 研究グループ長）<br><br>
+					  遠藤 敏夫 教授（東工大）<br>
 					  横田 理央 准教授（東工大）<br>
-					  遠藤 敏夫 准教授（東工大）<br>
+					  額田 彰 准教授（東工大）<br>
+					  實本 英之 助教（東工大）<br>
+					  松岡 聡 特任教授（東工大）<br>
+					  藤澤 克樹 特定教授（東工大）<br>
 					  小川 宏高（産総研 研究チーム長）<br>
 					  須崎 有康（産総研 主任研究員）<br>
 					  広渕 崇宏（産総研 主任研究員）<br>
 					  谷村 勇輔（産総研 主任研究員）<br>
-					  佐藤 仁（産総研 主任研究員）
+					  佐藤 仁（産総研 主任研究員）<br>
+					  Mohamed Wahib（産総研 主任研究員）<br>
+					  穐山 空道（産総研 研究員）<br>
+					  滝澤 真一朗（産総研 招聘研究員）<br>
+					  三浦 信一（産総研 招聘研究員）<br>
+					  萩島 功一（産総研 招聘研究員）<br>
+					  佐々木 淳（産総研 招聘研究員）<br>
+					  宮﨑 淳（産総研 客員研究員）
 					</p>
 
 					<h3>データ活用班</h3>
 					<p class="lead">
-					  班長 小川 宏高（産総研 研究チーム長）<br>
+					  班長 小川 宏高（産総研 研究チーム長）<br><br>
 					  篠田 浩一 教授（東工大）<br>
 					  村田 剛志 准教授（東工大）<br>
+					  井上 中順 助教（東工大）<br>
+					  中村 良介（産総研 研究チーム長）<br>
 					  李時旭（産総研 主任研究員）<br>
-					  中村 良介（産総研 研究チーム長）</p>
+					  Poliyapram Vinayaraj（産総研 特別研究員）
+					</p>
 
 					<p class="lead">
 					  寺野 隆雄 教授（東工大）<br>
-					  小野 功 准教授（東工大）<br>
-					  高安 美佐子 准教授（東工大）<br>
+					  高安 美佐子 教授（東工大）<br>
 					  出口 弘 教授（東工大）<br>
-					  本村 陽一（産総研 主席研究員）<br>
-					  櫻井 瑛一（産総研 研究員）</p>
+					  小野 功 准教授（東工大）<br>
+					  本村 陽一（産総研 首席研究員）<br>
+					  櫻井 瑛一（産総研 研究員）<br>
+					  寺野 隆雄（産総研 招聘研究員）<br>
+					  村田 悠也（産総研 特別研究員）
+					</p>
 
 					<p class="lead">
 					  秋山 泰 教授（東工大）<br>
@@ -218,8 +234,15 @@
 					  大上 雅史 助教（東工大）<br>
 					  関嶋 政和 研究ユニットリーダー（東工大）<br>
 					  瀬々 潤（産総研 研究チーム長）<br>
+					  富井 健太郎（産総研 研究チーム長）<br>
 					  永田 賢二（産総研 主任研究員）<br>
-					  富井 健太郎（産総研 研究チーム長）</p>
+					  Kuo Tony（産総研 特別研究員）
+					</p>
+
+					<p class="lead">
+					  岡崎 直観 教授（東工大）<br>
+					  高村 大也（産総研 研究チーム長）
+					</p>
 				</div>
 			</div>
 		</div><!-- /.container -->
