--- a/information/index-en.html
+++ b/information/index-en.html
@@ -47,11 +47,11 @@
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">                 
-							<li class="scroll active"><a href="../index.html#information">RWBC-OILについて</a></li> 
-							<li class="scroll"><a href="../index.html#member">メンバー</a></li>                     
-							<li class="scroll"><a href="../index.html#thema">研究テーマと計画</a></li>
-							<li class="scroll"><a href="../index.html#contact">アクセス</a></li>   
-							<li class="scroll"><a href="index-en.html">English</a></li>   
+							<li class="scroll active"><a href="../index.html#information">About RWBC-OIL</a></li> 
+							<li class="scroll"><a href="../index.html#member">Members</a></li>                     
+							<li class="scroll"><a href="../index.html#thema">Research Plan</a></li>
+							<li class="scroll"><a href="../index.html#contact">Access</a></li>   
+							<li class="scroll"><a href="index-en.html">日本語</a></li>   
 						</ul>
 					</div>
 				</div><!--/.container-->
