すでにあるBug　Fixed

--- a/information/index.html
+++ b/information/index.html
@@ -47,7 +47,7 @@
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">                 
-							<li class="scroll active"><a href="../index.html#information">RWBC-OILについて</a></li> 
+							<li class="scroll active"><a href="../index.html#information">RWBC-OIL</a></li> 
 							<li class="scroll"><a href="../index.html#member">メンバー</a></li>                     
 							<li class="scroll"><a href="../index.html#thema">研究テーマと計画</a></li>
 							<li class="scroll"><a href="../index.html#contact">アクセス</a></li>   
