--- a/information/index-en.html
+++ b/information/index-en.html
@@ -47,7 +47,7 @@
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">                 
-							<li class="scroll active"><a href="../index.html#information">About RWBC-OIL</a></li> 
+							<li class="scroll active"><a href="../index.html#information">RWBC-OIL</a></li> 
 							<li class="scroll"><a href="../index.html#member">Members</a></li>                     
 							<li class="scroll"><a href="../index.html#thema">Research Plan</a></li>
 							<li class="scroll"><a href="../index.html#contact">Access</a></li>   
