English page added. partly Japanese-->English

--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
             <div class="row">
 				 <div class="col-md-12">
 					<!--p class="lead">RWBC-OIL ラボ長　松岡 聡（東京工業大学 教授）<a href="#" class="btn btn-warning">ラボ長挨拶</a><br-->
-					<p class="lead">RWBC-OIL ラボ長　横井 一仁（産業技術総合研究所 研究戦略部長）<a href="#" class="btn btn-warning">ラボ長挨拶</a><br>
-					RWBC-OIL 副ラボ長　小川 宏高（産業技術総合研究所 研究チーム長）</a><br>
+					<p class="lead">RWBC-OIL ラボ長　横井 一仁（産業技術総合研究所 研究戦略部長）<!--a href="#" class="btn btn-warning">ラボ長挨拶</a--><br>
+					RWBC-OIL 副ラボ長　小川 宏高（産業技術総合研究所 研究チーム長）<br>
 					RWBC-OIL 副ラボ長　遠藤 敏夫（東京工業大学 教授）</p>
 
 
