--- a/information/index-en.html
+++ b/information/index-en.html
@@ -16,7 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="../css/style.css" rel="stylesheet">
-	
+
     <!-- Custom Fonts -->
     <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -43,15 +43,15 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand topnav" href="../index.html"><img class="img-rounded img-responsive" src="../img/oil-logo.png" alt=""></a>             
+						<a class="navbar-brand topnav" href="../index.html"><img class="img-rounded img-responsive" src="../img/oil-logo.png" alt=""></a>
 					</div>
 					<div class="collapse navbar-collapse">
-						<ul class="nav navbar-nav navbar-right">                 
-							<li class="scroll active"><a href="../index.html#information">RWBC-OIL</a></li> 
-							<li class="scroll"><a href="../index.html#member">Members</a></li>                     
-							<li class="scroll"><a href="../index.html#thema">Research Plan</a></li>
-							<li class="scroll"><a href="../index.html#contact">Access</a></li>   
-							<li class="scroll"><a href="index-en.html">日本語</a></li>   
+						<ul class="nav navbar-nav navbar-right">
+							<li class="scroll active"><a href="../index-en.html#information">RWBC-OIL</a></li>
+							<li class="scroll"><a href="../index-en.html#member">Members</a></li>
+							<li class="scroll"><a href="../index-en.html#thema">Research Plan</a></li>
+							<li class="scroll"><a href="../index-en.html#contact">Access</a></li>
+							<li class="scroll"><a href="index.html">日本語</a></li>
 						</ul>
 					</div>
 				</div><!--/.container-->
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>RWBC-OILについて</h2>
+                    <h2>About RWBC-OIL</h2>
                 </div>
             </div>
         </div><!-- /.container -->
@@ -76,25 +76,25 @@
 
             <div class="row">
                 <ul class="breadcrumb">
-					<li><a href="../index.html">ホーム</a></li>
-					<li class="active">RWBC-OILについて</li>
+					<li><a href="../index.html">Home</a></li>
+					<li class="active">About RWBC-OIL</li>
 				</ul>
             </div>
 
         <!-- /.container -->
-		
+
 		</div>
 	</div>
-	
+
 	<div class="content-section-d">
 
         <div class="container">
             <div class="row">
 				 <div class="col-md-12">
 				 	<p class="lead">ビッグデータ処理オープンプラットフォームに関する研究開発、ビッグデータを活用するデータ処理技術に関する研究開発を行う。</p>
-					
+
 					<p class="text-center"><img src="img/sample.jpg" class="img-responsive" alt=""></p>
-					
+
 				</div>
 			</div>
 		</div>
