information/index-en.html japanese-->english

--- a/index-en.html
+++ b/index-en.html
@@ -47,7 +47,7 @@
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
-							<li class="scroll"><a href="information/index.html">About RWBC-OIL</a></li>
+							<li class="scroll"><a href="information/index-en.html">About RWBC-OIL</a></li>
 							<li class="scroll"><a href="#koubo">Careers</a></li>
 							<li class="scroll"><a href="#member">Members</a></li>
 							<li class="scroll"><a href="#thema">Research</a></li>
