--- a/information/index-en.html
+++ b/information/index-en.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>RWBC-OILについて｜産総研・東工大 実社会ビッグデータ活用オープンイノベーションラボラトリ</title>
+    <title>About RWBC-OIL｜AIST-Tokyo Tech Real World Big-Data Computing Open Innovation Laboratory (RWBC-OIL)</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="row">
 				 <div class="col-md-12">
-				 	<p class="lead">ビッグデータ処理オープンプラットフォームに関する研究開発、ビッグデータを活用するデータ処理技術に関する研究開発を行う。</p>
+				 	<p class="lead">Research on building big data platform, processing big data and its applications.</p>
 
 					<p class="text-center"><img src="img/sample.jpg" class="img-responsive" alt=""></p>
 
