--- a/index-en.html
+++ b/index-en.html
@@ -344,7 +344,7 @@
                                           <li>Software stack that automatically deploys necessary software to setup research/development environments</li>
                                           <li>Container technologies that enable resource isolation while achieving high performance</li>
                                         </ul>
-					<p class="lead"><a href="#">Research Topic 2: Plactical Use of Real World Big Data</a></p>
+					<p class="lead"><a href="#">Research Topic 2: Practical Use of Real World Big Data</a></p>
                                         <p>We are conducting researches on the following four sub-topics.</p>
                                         <ul>
                                           <li>Analysis of real world big data using Large-scale DNN</li>
