1, add link https://www.itri.aist.go.jp/cpc/researcher/takano.html for takano-san 2, 「Ryousei」（uあり）

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 					<h3>実社会HPC班</h3>
 					<p class="lead">
-					  班長 高野 了成 （産総研 研究グループ長）<br><br>
+            班長 <a href="https://www.itri.aist.go.jp/cpc/researcher/takano.html">高野 了成 </a>（産総研 研究グループ長)<br><br>
 					  遠藤 敏夫 教授（東工大）<br>
 					  横田 理央 准教授（東工大）<br>
 					  額田 彰 准教授（東工大）<br>
