--- a/index-en.html
+++ b/index-en.html
@@ -253,7 +253,8 @@
 
 					<h3>Real World HPC Systems for Big Data/AI Research Team</h3>
 					<p class="lead">
-					  Group Leader: Ryosei Takano (Research Leader, AIST)<br><br>
+            Group Leader:<a href="https://www.itri.aist.go.jp/cpc/researcher/takano.html">Ryousei Takano </a>(Research Leader, AIST)<br><br>
+
 					  Toshio Endo (Professor, TokyoTech)<br>
 					  Rio Yokota (Associate Professor, TokyoTech)<br>
 					  Akira Nukada (Associate Professor, TokyoTech)<br>
