1,   Storategy -> Strategy .  2,   Direct -> Director / Head / Leader ?

--- a/index-en.html
+++ b/index-en.html
@@ -238,7 +238,7 @@
 						<tr>
 							<td>RWBC-OIL Director</td>
 							<td>　</td>
-							<td>Kazuhito Yokoi（Research Storategy Direct, AIST）<!--a href="#" class="btn btn-warning">ラボ長挨拶</a--></td>
+							<td>Kazuhito Yokoi (Research Strategy Director, AIST)<!--a href="#" class="btn btn-warning">ラボ長挨拶</a--></td>
 						</tr>
 						<tr>
 							<td>RWBC-OIL Deputy Director</td><td></td>
@@ -253,7 +253,7 @@
 
 					<h3>Real World HPC Systems for Big Data/AI Research Team</h3>
 					<p class="lead">
-            Group Leader:<a href="https://www.itri.aist.go.jp/cpc/researcher/takano.html">Ryousei Takano </a>(Research Leader, AIST)<br><br>
+            Group Leader:<a href="https://www.itri.aist.go.jp/cpc/researcher/takano.html">Ryousei Takano</a> (Research Leader, AIST)<br><br>
 
 					  Toshio Endo (Professor, TokyoTech)<br>
 					  Rio Yokota (Associate Professor, TokyoTech)<br>
