events pages added

--- a/index-en.html
+++ b/index-en.html
@@ -51,6 +51,7 @@
 							<li class="scroll"><a href="#koubo">Careers</a></li>
 							<li class="scroll"><a href="#member">Members</a></li>
 							<li class="scroll"><a href="#thema">Research</a></li>
+              <li class="scroll"><a href="./events/index-en.html">Events</a></li>
 							<li class="scroll"><a href="#contact">Access</a></li>
 							<li class="scroll"><a href="index.html">日本語</a></li>
 						</ul>
