--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 							<!--li class="scroll"><a href="#koubo">ニュース</a></li-->
 							<li class="scroll"><a href="#member">メンバー</a></li>
 							<li class="scroll"><a href="#thema">研究テーマ</a></li>
+              <li class="scroll"><a href="./events/index.html">イベント</a></li>
 							<li class="scroll"><a href="#contact">アクセス</a></li>
 							<li class="scroll"><a href="index-en.html">English</a></li>
 						</ul>
