--- a/events/index-en.html
+++ b/events/index-en.html
@@ -23,8 +23,8 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
 </head>
@@ -50,7 +50,7 @@
 							<li class="scroll active"><a href="../index-en.html#information">RWBC-OIL</a></li>
 							<li class="scroll"><a href="../index-en.html#member">Members</a></li>
 							<li class="scroll"><a href="../index-en.html#thema">Research</a></li>
-              <li class="scroll"><a href="./index-en.html">Events</a></li>
+	      <li class="scroll"><a href="./index-en.html">Events</a></li>
 							<li class="scroll"><a href="../index-en.html#contact">Access</a></li>
 							<li class="scroll"><a href="index.html">日本語</a></li>
 						</ul>
@@ -63,72 +63,58 @@
 
     <!-- banner -->
     <div class="banner-cover">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Events</h2>
-                </div>
-            </div>
-        </div><!-- /.container -->
+	<div class="container">
+	    <div class="row">
+		<div class="col-lg-6">
+		    <h2>Events</h2>
+		</div>
+	    </div>
+	</div><!-- /.container -->
     </div><!-- /.banner-cove -->
 
 	<div class="breadcrumb-bg">
 		<div class="container">
 
-            <div class="row">
-                <ul class="breadcrumb">
+	    <div class="row">
+		<ul class="breadcrumb">
 					<li><a href="../index.html">Home</a></li>
 					<li class="active">Events</li>
 				</ul>
-            </div>
+	    </div>
 
-        <!-- /.container -->
+	<!-- /.container -->
 
 		</div>
 	</div>
 
 	<div class="content-section-d">
 
-        <div class="container">
-            <div class="row">
-				 <div class="col-md-12">
+	<div class="container">
+	    <div class="row">
+		<div class="col-md-12">
+		<!-- Add new event on top -->
 
-           <table class="listTable">
-              <tr>
-                <th scope="row" style="width:20%;"><a href="https://unit.aist.go.jp/rwbc-oil/events/index.html">OIL Workshop May</a></th>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row">開催期間</th>
-                <td>2018/04/03（火）</td>
-              </tr>
-              <tr>
-                <th scope="row">開催会場</th>
-                <td>＠＠東京工業大学</td>
-              </tr>
-              <tr>
-                <th scope="row">詳細情報ｓｓｓｓｓｓｓｓｓｓｓ</th>
-                <td></td>
-              </tr>
-            </table>
-
-
-
-				</div>
-			</div>
+			<h3>The 1st RWBC-OIL Workshop</h3>
+			  <ul>
+			    <li>Date: 2018/05/08</li>
+			    <li>Venue: Kuramae Hall, Tokyo Tech Front</li>
+			    <li><a href="./20180508-workshop01.html">More information</a></li>
+			  </ul>
 		</div>
-        <!-- /.container -->
+	    </div>
+	</div>
+	<!-- /.container -->
 
     </div>
     <!-- /.content-section-b -->
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <div class="row">
+	<div class="container">
+	    <div class="row">
 				<div class="col-lg-4 text-left">
 					<p class="copyright text-muted small"> Copyright &copy; RWBC-OIL All Rights Reserved</p>
-                </div>
+		</div>
 				<div class="col-lg-8 text-right">
 					<ul class="list-inline">
 						<li>
@@ -139,8 +125,8 @@
 						</li>
 					</ul>
 				</div>
-            </div>
-        </div>
+	    </div>
+	</div>
     </footer>
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
