--- a/events/index-en.html
+++ b/events/index-en.html
@@ -94,6 +94,13 @@
 		<div class="col-md-12">
 		<!-- Add new event on top -->
 
+                        <h3>Exhibit RWBC-OIL Reserch Activities at ISC 2018</h3>
+                          <ul>
+                            <li>Date: 2018/06/25 - 2018/06/27</li>
+                            <li>Venue: Frankfurt, Germany</li>
+                            <li>More information (Preparing)</li>
+                          </ul>
+
 			<h3>The 1st RWBC-OIL Workshop</h3>
 			  <ul>
 			    <li>Date: 2018/05/08</li>
