--- a/events/index.html
+++ b/events/index.html
@@ -94,6 +94,13 @@
 		<div class="col-md-12">
 		<!-- Add new event on top -->
 
+			<h3>ISC 2018 Exhibitionでの研究成果展示</h3>
+			<ul>
+			  <li>開催日程: 2018/06/25 - 2018/06/27</li>
+			  <li>開催場所: フランクフルト, ドイツ</li>
+			  <li>詳細(準備中)</li>
+			</ul>
+
 			<h3>第1回 RWBC-OIL Workshop</h3>
 			<ul>
 			  <li>開催日程: 2018/05/08（火）</li>
