--- a/events/20180508-workshop01.html
+++ b/events/20180508-workshop01.html
@@ -210,7 +210,7 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">13:30 - 13:40</td>
                                 <td><span class="presentation-title">Overview of RG1</span><br>
-                                    <span class="presentation-speaker">Ryousei Takano</span>
+                                    <span class="presentation-speaker">Dr. Ryousei Takano</span>
                                 </td>
                         </tr>
 
@@ -231,7 +231,7 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">14:10 - 14:25</td>
                                 <td><span class="presentation-title">RWBC-OIL Activities for Data-Driven Optimization of Datacenter Operation</span><br>
-                                    <span class="presentation-speaker">Shinichiro Takizawa</span>
+                                    <span class="presentation-speaker">Dr. Shinichiro Takizawa</span>
                                 </td>
                         </tr>
 
@@ -246,14 +246,14 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">14:30 - 14:40</td>
                                 <td><span class="presentation-title">Overview of RG2-1</span><br>
-                                    <span class="presentation-speaker">Koichi Shinoda</span>
+                                    <span class="presentation-speaker">Prof. Koichi Shinoda</span>
                                 </td>
                         </tr>
 
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">14:40 - 14:55</td>
                                 <td><span class="presentation-title">Deep learning for Remotely Sensed Data Classification/Segmentation</span><br>
-                                    <span class="presentation-speaker">Poliyapram Vinayraj</span>
+                                    <span class="presentation-speaker">Dr. Poliyapram Vinayraj</span>
                                 </td>
                         </tr>
 
@@ -283,7 +283,7 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">16:15 - 16:30</td>
                                 <td><span class="presentation-title">Overview of RG2-2</span><br>
-                                    <span class="presentation-speaker">Takao Terano</span>
+                                    <span class="presentation-speaker">Dr. Takao Terano</span>
                                 </td>
                         </tr>
 
@@ -298,21 +298,21 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">16:35 - 16:45</td>
                                 <td><span class="presentation-title">Overview of RG2-3: Ultra-High Dimensional Data Analysis</span><br>
-                                    <span class="presentation-speaker">Jun Sese</span>
+                                    <span class="presentation-speaker">Dr. Jun Sese</span>
                                 </td>
                         </tr>
 
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">16:45 - 17:00</td>
                                 <td><span class="presentation-title">MEGADOCK: a supercomputing bioinformatics application for protein-protein interaction prediction</span><br>
-                                    <span class="presentation-speaker">Masahito Ohue</span>
+                                    <span class="presentation-speaker">Dr. Masahito Ohue</span>
                                 </td>
                         </tr>
 
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">17:00 - 17:15</td>
                                 <td><span class="presentation-title">Classifying Phenotype from Genotype via Deep Learning Models</span><br>
-                                    <span class="presentation-speaker">Tony Kuo</span>
+                                    <span class="presentation-speaker">Dr. Tony Kuo</span>
                                 </td>
                         </tr>
 
@@ -327,7 +327,7 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">17:20 - 17:35</td>
                                 <td><span class="presentation-title">Overview of RG2-4: Big Data and Language Grounding</span><br>
-                                    <span class="presentation-speaker">Hiroya Takamura</span>
+                                    <span class="presentation-speaker">Dr. Hiroya Takamura</span>
                                 </td>
                         </tr>
 
