Updated program of 1st RWBC-OIL Workshop

--- a/events/20180508-workshop01.html
+++ b/events/20180508-workshop01.html
@@ -109,8 +109,9 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                     <p>
 日　時：2018年5月8日（火）10:30〜17:45　（10:00受付開始）<br>
 場　所：<a href="http://www.somuka.titech.ac.jp/ttf/access/index.html" target="_blank">東工大蔵前会館（東京都目黒区大岡山2丁目12－1）</a><br>
-参加費：無料<b4>
+参加費：無料<br>
 主　催：産総研・東工大　実社会ビッグデータ活用 オープンイノベーションラボラトリ<br>
+言　語：英語 (All presentations are given in English.)<br>
 参加申込み：　<a href="https://goo.gl/forms/QmG8cyUpsYEFmxLZ2" target="_blank">こちらから</a>
                     </p>
 
@@ -194,8 +195,8 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
 
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">12:40 - 13:20</td>
-                                <td><span class="presentation-title">Invited talk 2: TBD</span><br>
-                                    <span class="presentation-speaker">TBD</span>
+                                <td><span class="presentation-title">Invited talk 2: PPP-Net: Platform-aware Progressive search for Pareto-optimal Neural Architectures</span><br>
+                                    <span class="presentation-speaker">Prof. Min Sun, Department of Electrical Engineering, National Tsing Hua University, Taiwan</span>
                                 </td>
                         </tr>
 
