--- a/events/20180508-workshop01.html
+++ b/events/20180508-workshop01.html
@@ -124,7 +124,7 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                         </tr>
                         <tr>
                                 <td class="table-right-padding">Venue:</td>
-                                <td><a href="http://www.somuka.titech.ac.jp/ttf/access/index.html" target="_blank">Kuramae Hall, Tokyo Tech Front</a></td>
+                                <td><a href="http://www.somuka.titech.ac.jp/ttf/access/index.html" target="_blank">Kuramae Hall, Tokyo Tech Front (2-12-1 Ookayama Meguro, Tokyo)</a></td>
                         </tr>
                         <tr>
                                 <td class="table-right-padding">Chair:</td>
