Kevin -> Characterizing the Interference between I/O and MPI Traffic on Fat-tree Networks Tsuji -> Speeding Up Deep Learning with Second Order Optimisation and Distributed Training  ‘(Tentative)’

--- a/events/20180508-workshop01.html
+++ b/events/20180508-workshop01.html
@@ -115,7 +115,7 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
 参加申込み：　<a href="https://goo.gl/forms/QmG8cyUpsYEFmxLZ2" target="_blank">こちらから</a>
                     </p>
 
-                    <h3>RWBC-OIL Workshop Program (Tentative)</h3>
+                    <h3>RWBC-OIL Workshop Program</h3>
 
                     <table>
                         <tr>
@@ -217,14 +217,14 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
 
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">13:40 - 13:55</td>
-                                <td><span class="presentation-title">Simulation I/O vs MPI interference in fat-tree network in order to characterize and mitigate the effects of interference</span><br>
+                                <td><span class="presentation-title">Characterizing the Interference between I/O and MPI Traffic on Fat-tree Networks</span><br>
                                     <span class="presentation-speaker">Kevin Brown</span>
                                 </td>
                         </tr>
 
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">13:55 - 14:10</td>
-                                <td><span class="presentation-title">Implementing and evaluating second order distributed deep learning</span><br>
+                                <td><span class="presentation-title">Speeding Up Deep Learning with Second Order Optimisation and Distributed Training</span><br>
                                     <span class="presentation-speaker">Yohei Tsuji</span>
                                 </td>
                         </tr>
