Add 'Dr.' title to the speaker of Invited Talk 1 'Gerald Pao'.

--- a/events/20180508-workshop01.html
+++ b/events/20180508-workshop01.html
@@ -173,7 +173,7 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                         <tr class="table-bottom-line">
                                 <td class="table-right-padding">11:20 - 11:40</td>
                                 <td><span class="presentation-title">Invited talk 1: Zebrafish Neural Activity Maps for Novel Neuromorphic Deep Learning Architectures</span><br>
-                                    <span class="presentation-speaker">Gerald Pao (UCSD)</span>
+                                    <span class="presentation-speaker">Dr. Gerald Pao (UCSD)</span>
                                 </td>
                         </tr>
 
