using script to generate header and foot

--- a/index-en.html
+++ b/index-en.html
@@ -29,10 +29,12 @@
 </head>
 
 <body>
+
 	<header id="home">
 		<div class="intro-cover">
 			<div><img src="img/intro-img.jpg" alt=""></div>
 		</div><!--/.intro-cover-->
+<!-- BeginOilHeaderEng -->
 		<nav class="navbar navbar-default topnav" role="navigation">
 			<div id="sticky-menubar" class="main-nav">
 				<div class="container">
@@ -60,6 +62,7 @@
 			</div><!--/#main-nav-->
 		</nav><!--/nav-->
 	</header><!--/#home-->
+<!-- BeginOilHeaderEng -->
 
 	<div class="content-section-a">
 	<div class="container">
@@ -374,26 +377,30 @@
 
 	</section>
 
-    <!-- Footer -->
-    <footer>
-	<div class="container">
-	    <div class="row">
-				<div class="col-lg-4 text-left">
-					<p class="copyright text-muted small"> Copyright &copy; RWBC-OIL All Rights Reserved</p>
-		</div>
-				<div class="col-lg-8 text-right">
-					<ul class="list-inline">
-						<li>
-							<a href="http://www.aist.go.jp"><img src="img/footer-aist-logo.png" alt=""></a>
-						</li>
-						<li>
-							<a href="http://www.titech.ac.jp"><img src="img/footer-logo.png" alt=""></a>
-						</li>
-					</ul>
-				</div>
-	    </div>
-	</div>
-    </footer>
+<!-- BeginOilFootEng -->
+
+<!-- ###################Begin, Do Not Edit, Generate By Tools################### -->
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+    <div class="col-lg-4 text-left">
+      <p class="copyright text-muted small"> Copyright &copy; RWBC-OIL All Rights Reserved</p>
+            </div>
+    <div class="col-lg-8 text-right">
+      <ul class="list-inline">
+        <li>
+          <a href="http://www.aist.go.jp"><img src="./img/footer-aist-logo.png" alt=""></a>        </li>
+        <li>
+          <a href="http://www.titech.ac.jp"><img src="./img/footer-logo.png" alt=""></a>        </li>
+      </ul>
+    </div>
+        </div>
+    </div>
+</footer>
+
+<!-- ###################End, Do Not Edit, Generate By Tools################### -->
+<!-- EndOilFootEng -->
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
