--- a/information/index-en.html
+++ b/information/index-en.html
@@ -30,34 +30,34 @@
 </head>
 
 <body>
+<!-- Navigation -->
+<header id="home">
+<!-- BeginOilHeaderEng -->
 
-    <!-- Navigation -->
-    <header id="home">
-		<nav class="navbar navbar-default topnav" role="navigation">
-			<div id="sticky-menubar" class="main-nav">
-				<div class="container">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<a class="navbar-brand topnav" href="../index.html"><img class="img-rounded img-responsive" src="../img/oil-logo.png" alt=""></a>
-					</div>
-					<div class="collapse navbar-collapse">
-						<ul class="nav navbar-nav navbar-right">
-							<li class="scroll active"><a href="../index-en.html#information">RWBC-OIL</a></li>
-							<li class="scroll"><a href="../index-en.html#member">Members</a></li>
-							<li class="scroll"><a href="../index-en.html#thema">Research Plan</a></li>
-							<li class="scroll"><a href="../index-en.html#contact">Access</a></li>
-							<li class="scroll"><a href="index.html">日本語</a></li>
-						</ul>
-					</div>
-				</div><!--/.container-->
-			</div><!--/#main-nav-->
-		</nav><!--/nav-->
-	</header><!--/#home-->
+<!-- ###################Begin, Do Not Edit, Generate By Tools################### -->
+<nav class="navbar navbar-default topnav" role="navigation">
+  <div id="sticky-menubar" class="main-nav">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand topnav" href="../index.html">          <img class="img-rounded img-responsive" src="../img/oil-logo.png" alt=""></a><!-- Dummy-->      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+            <li class="scroll"><a href="../information/index-en.html">RWBC-OILについて</a></li>            <li class="scroll"><a href="../inde-enx.html#koubo">Careers</a></li-->            <!--li class="scroll"><a href="#koubo">ニュース</a></li-->
+            <li class="scroll"><a href="../index-en.html#member">Members</a></li>            <li class="scroll"><a href="../index-en.html#thema">Research</a></li>            <li class="scroll"><a href="../events/index-en.html">Events</a></li>            <li class="scroll"><a href="../index-en.html#contact">Access</a></li>            <li class="scroll"><a href="../index.html">日本語</a></li>        </ul>
+      </div>
+    </div><!--/.container-->
+  </div><!--/#main-nav-->
+</nav><!--/nav-->
+
+<!-- ###################End, Do Not Edit, Generate By Tools################### -->
+<!-- EndOilHeaderEng -->
+</header><!--/#home-->
 
 
     <!-- banner -->
@@ -103,26 +103,30 @@
     </div>
     <!-- /.content-section-b -->
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-				<div class="col-lg-4 text-left">
-					<p class="copyright text-muted small"> Copyright &copy; RWBC-OIL All Rights Reserved</p>
-                </div>
-				<div class="col-lg-8 text-right">
-					<ul class="list-inline">
-						<li>
-							<a href="http://www.aist.go.jp"><img src="../img/footer-aist-logo.png" alt=""></a>
-						</li>
-						<li>
-							<a href="http://www.titech.ac.jp"><img src="../img/footer-logo.png" alt=""></a>
-						</li>
-					</ul>
-				</div>
+<!-- BeginOilFootJp -->
+
+<!-- ###################Begin, Do Not Edit, Generate By Tools################### -->
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+    <div class="col-lg-4 text-left">
+      <p class="copyright text-muted small"> Copyright &copy; RWBC-OIL All Rights Reserved</p>
             </div>
+    <div class="col-lg-8 text-right">
+      <ul class="list-inline">
+        <li>
+          <a href="http://www.aist.go.jp"><img src="../img/footer-aist-logo.png" alt=""></a>        </li>
+        <li>
+          <a href="http://www.titech.ac.jp"><img src="../img/footer-logo.png" alt=""></a>        </li>
+      </ul>
+    </div>
         </div>
-    </footer>
+    </div>
+</footer>
+
+<!-- ###################End, Do Not Edit, Generate By Tools################### -->
+<!-- EndOilFootJp -->
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
