--- a/information/index.html
+++ b/information/index.html
@@ -31,8 +31,10 @@
 
 <body>
 
+
     <!-- Navigation -->
     <header id="home">
+<!--　BeginOilHeaderJp　-->
 		<nav class="navbar navbar-default topnav" role="navigation">
 			<div id="sticky-menubar" class="main-nav">
 				<div class="container">
@@ -51,14 +53,14 @@
 							<li class="scroll"><a href="../index.html#member">メンバー</a></li>
 							<li class="scroll"><a href="../index.html#thema">研究テーマと計画</a></li>
 							<li class="scroll"><a href="../index.html#contact">アクセス</a></li>
-							<li class="scroll"><a href="index-en.html">English</a></li>   
+							<li class="scroll"><a href="index-en.html">English</a></li>
 						</ul>
 					</div>
 				</div><!--/.container-->
 			</div><!--/#main-nav-->
 		</nav><!--/nav-->
+<!-- EndOilHeaderJp -->
 	</header><!--/#home-->
-
 
     <!-- banner -->
     <div class="banner-cover">
@@ -103,26 +105,30 @@
     </div>
     <!-- /.content-section-b -->
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-				<div class="col-lg-4 text-left">
-					<p class="copyright text-muted small"> Copyright &copy; RWBC-OIL All Rights Reserved</p>
-                </div>
-				<div class="col-lg-8 text-right">
-					<ul class="list-inline">
-						<li>
-							<a href="http://www.aist.go.jp"><img src="../img/footer-aist-logo.png" alt=""></a>
-						</li>
-						<li>
-							<a href="http://www.titech.ac.jp"><img src="../img/footer-logo.png" alt=""></a>
-						</li>
-					</ul>
-				</div>
+<!-- BeginOilFootJp -->
+
+<!-- ###################Begin, Do Not Edit, Generate By Tools################### -->
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+    <div class="col-lg-4 text-left">
+      <p class="copyright text-muted small"> Copyright &copy; RWBC-OIL All Rights Reserved</p>
             </div>
+    <div class="col-lg-8 text-right">
+      <ul class="list-inline">
+        <li>
+          <a href="http://www.aist.go.jp"><img src="../img/footer-aist-logo.png" alt=""></a>        </li>
+        <li>
+          <a href="http://www.titech.ac.jp"><img src="../img/footer-logo.png" alt=""></a>        </li>
+      </ul>
+    </div>
         </div>
-    </footer>
+    </div>
+</footer>
+
+<!-- ###################End, Do Not Edit, Generate By Tools################### -->
+<!-- EndOilFootJp -->
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
