--- a/events/index-en.html
+++ b/events/index-en.html
@@ -33,31 +33,31 @@
 
     <!-- Navigation -->
     <header id="home">
-		<nav class="navbar navbar-default topnav" role="navigation">
-			<div id="sticky-menubar" class="main-nav">
-				<div class="container">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<a class="navbar-brand topnav" href="../index.html"><img class="img-rounded img-responsive" src="../img/oil-logo.png" alt=""></a>
-					</div>
-					<div class="collapse navbar-collapse">
-						<ul class="nav navbar-nav navbar-right">
-							<li class="scroll active"><a href="../index-en.html#information">RWBC-OIL</a></li>
-							<li class="scroll"><a href="../index-en.html#member">Members</a></li>
-							<li class="scroll"><a href="../index-en.html#thema">Research</a></li>
-	      <li class="scroll"><a href="./index-en.html">Events</a></li>
-							<li class="scroll"><a href="../index-en.html#contact">Access</a></li>
-							<li class="scroll"><a href="index.html">日本語</a></li>
-						</ul>
-					</div>
-				</div><!--/.container-->
-			</div><!--/#main-nav-->
-		</nav><!--/nav-->
+<!-- BeginOilHeaderEng -->
+
+<!-- ###################Begin, Do Not Edit, Generate By Tools################### -->
+<nav class="navbar navbar-default topnav" role="navigation">
+  <div id="sticky-menubar" class="main-nav">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand topnav" href="../index.html">          <img class="img-rounded img-responsive" src="../img/oil-logo.png" alt=""></a><!-- Dummy-->      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+            <li class="scroll"><a href="../information/index-en.html">RWBC-OILについて</a></li>            <li class="scroll"><a href="../inde-enx.html#koubo">Careers</a></li-->            <!--li class="scroll"><a href="#koubo">ニュース</a></li-->
+            <li class="scroll"><a href="../index-en.html#member">Members</a></li>            <li class="scroll"><a href="../index-en.html#thema">Research</a></li>            <li class="scroll"><a href="../events/index-en.html">Events</a></li>            <li class="scroll"><a href="../index-en.html#contact">Access</a></li>            <li class="scroll"><a href="../index.html">日本語</a></li>        </ul>
+      </div>
+    </div><!--/.container-->
+  </div><!--/#main-nav-->
+</nav><!--/nav-->
+
+<!-- ###################End, Do Not Edit, Generate By Tools################### -->
+<!-- EndOilHeaderEng -->
 	</header><!--/#home-->
 
 
@@ -115,6 +115,7 @@
     </div>
     <!-- /.content-section-b -->
 
+<!-- BeginOilFootEng -->
     <!-- Footer -->
     <footer>
 	<div class="container">
@@ -135,6 +136,7 @@
 	    </div>
 	</div>
     </footer>
+<!-- BeginOilFootEng -->
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
