--- a/index.html
+++ b/index.html
@@ -33,33 +33,31 @@
 		<div class="intro-cover">
 			<div><img src="img/intro-img.jpg" alt=""></div>
 		</div><!--/.intro-cover-->
-		<nav class="navbar navbar-default topnav" role="navigation">
-			<div id="sticky-menubar" class="main-nav">
-				<div class="container">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<a class="navbar-brand topnav" href="#"><img class="img-rounded img-responsive" src="img/oil-logo.png" alt=""></a>
-					</div>
-					<div class="collapse navbar-collapse">
-						<ul class="nav navbar-nav navbar-right">
-							<li class="scroll"><a href="information/index.html">RWBC-OILについて</a></li>
-							<li class="scroll"><a href="#koubo">公募情報</a></li-->
-							<!--li class="scroll"><a href="#koubo">ニュース</a></li-->
-							<li class="scroll"><a href="#member">メンバー</a></li>
-							<li class="scroll"><a href="#thema">研究テーマ</a></li>
-              <li class="scroll"><a href="./events/index.html">イベント</a></li>
-							<li class="scroll"><a href="#contact">アクセス</a></li>
-							<li class="scroll"><a href="index-en.html">English</a></li>
-						</ul>
-					</div>
-				</div><!--/.container-->
-			</div><!--/#main-nav-->
-		</nav><!--/nav-->
+<!-- BeginOilHeaderJp -->
+
+<!-- ###################Begin, Do Not Edit, Generate By Tools################### -->
+<nav class="navbar navbar-default topnav" role="navigation">
+  <div id="sticky-menubar" class="main-nav">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand topnav" href="./index.html">          <img class="img-rounded img-responsive" src="./img/oil-logo.png" alt=""></a><!-- Dummy-->      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+            <li class="scroll"><a href="./information/index.html">RWBC-OILについて</a></li>            <li class="scroll"><a href="./index.html#koubo">公募情報</a></li-->            <!--li class="scroll"><a href="#koubo">ニュース</a></li-->
+            <li class="scroll"><a href="./index.html#member">メンバー</a></li>            <li class="scroll"><a href="./index.html#thema">研究テーマ</a></li>            <li class="scroll"><a href="./events/index.html">イベント</a></li>            <li class="scroll"><a href="./index.html#contact">アクセス</a></li>            <li class="scroll"><a href="./index-en.html">English</a></li>        </ul>
+      </div>
+    </div><!--/.container-->
+  </div><!--/#main-nav-->
+</nav><!--/nav-->
+
+<!-- ###################End, Do Not Edit, Generate By Tools################### -->
+<!-- EndOilHeaderJp -->
 	</header><!--/#home-->
 
 	<div class="content-section-a">
@@ -355,26 +353,30 @@
 
 	</section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-				<div class="col-lg-4 text-left">
-					<p class="copyright text-muted small"> Copyright &copy; RWBC-OIL All Rights Reserved</p>
-                </div>
-				<div class="col-lg-8 text-right">
-					<ul class="list-inline">
-						<li>
-							<a href="http://www.aist.go.jp"><img src="img/footer-aist-logo.png" alt=""></a>
-						</li>
-						<li>
-							<a href="http://www.titech.ac.jp"><img src="img/footer-logo.png" alt=""></a>
-						</li>
-					</ul>
-				</div>
+<!-- BeginOilFootJp -->
+
+<!-- ###################Begin, Do Not Edit, Generate By Tools################### -->
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+    <div class="col-lg-4 text-left">
+      <p class="copyright text-muted small"> Copyright &copy; RWBC-OIL All Rights Reserved</p>
             </div>
+    <div class="col-lg-8 text-right">
+      <ul class="list-inline">
+        <li>
+          <a href="http://www.aist.go.jp"><img src="./img/footer-aist-logo.png" alt=""></a>        </li>
+        <li>
+          <a href="http://www.titech.ac.jp"><img src="./img/footer-logo.png" alt=""></a>        </li>
+      </ul>
+    </div>
         </div>
-    </footer>
+    </div>
+</footer>
+
+<!-- ###################End, Do Not Edit, Generate By Tools################### -->
+<!-- EndOilFootJp -->
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
