--- a/events/index-en.html
+++ b/events/index-en.html
@@ -136,7 +136,7 @@
 	    </div>
 	</div>
     </footer>
-<!-- BeginOilFootEng -->
+<!-- EndOilFootEng -->
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
