information header foot updated

--- a/events/index-en.html
+++ b/events/index-en.html
@@ -116,26 +116,28 @@
     <!-- /.content-section-b -->
 
 <!-- BeginOilFootEng -->
-    <!-- Footer -->
-    <footer>
-	<div class="container">
-	    <div class="row">
-				<div class="col-lg-4 text-left">
-					<p class="copyright text-muted small"> Copyright &copy; RWBC-OIL All Rights Reserved</p>
-		</div>
-				<div class="col-lg-8 text-right">
-					<ul class="list-inline">
-						<li>
-							<a href="http://www.aist.go.jp"><img src="../img/footer-aist-logo.png" alt=""></a>
-						</li>
-						<li>
-							<a href="http://www.titech.ac.jp"><img src="../img/footer-logo.png" alt=""></a>
-						</li>
-					</ul>
-				</div>
-	    </div>
-	</div>
-    </footer>
+
+<!-- ###################Begin, Do Not Edit, Generate By Tools################### -->
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+    <div class="col-lg-4 text-left">
+      <p class="copyright text-muted small"> Copyright &copy; RWBC-OIL All Rights Reserved</p>
+            </div>
+    <div class="col-lg-8 text-right">
+      <ul class="list-inline">
+        <li>
+          <a href="http://www.aist.go.jp"><img src="../img/footer-aist-logo.png" alt=""></a>        </li>
+        <li>
+          <a href="http://www.titech.ac.jp"><img src="../img/footer-logo.png" alt=""></a>        </li>
+      </ul>
+    </div>
+        </div>
+    </div>
+</footer>
+
+<!-- ###################End, Do Not Edit, Generate By Tools################### -->
 <!-- EndOilFootEng -->
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
