Modify workshop program

--- a/events/20180508-workshop01.html
+++ b/events/20180508-workshop01.html
@@ -108,7 +108,7 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                     </p>
                     <p>
 日　時：2018年5月8日（火）10:30〜17:45　（10:00受付開始）<br>
-場　所：<a href="http://www.somuka.titech.ac.jp/ttf/access/index.html" target="_blank">東工大蔵前会館（東京都目黒区大岡山2丁目12－1）</a><br>
+場　所：<a href="http://www.somuka.titech.ac.jp/ttf/access/index.html" target="_blank">くらまえホール, 東工大蔵前会館（東京都目黒区大岡山2丁目12－1）</a><br>
 参加費：無料<br>
 主　催：産総研・東工大　実社会ビッグデータ活用 オープンイノベーションラボラトリ<br>
 言　語：英語 (All presentations are given in English.)<br>
@@ -349,7 +349,7 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                     </table>
 
                     <h3>Poster session</h3>
-                    <ul>
+                    <ol>
                         <li><span class="presentation-speaker">Mohamed Wahib</span>, <span class="presentation-title">protoNN: Framework Agnostic, Scalable, and Optimization-driven Prototyping of DNNs for GPU-accelerated Supercomputers</span></li>
                         <li><span class="presentation-speaker">Chen Peng</span>, <span class="presentation-title">Pushing the Limits for 2D Convolution Computation On CUDA-enabled GPUs</span></li>
                         <li><span class="presentation-speaker">Mateusz Bysiek</span>, <span class="presentation-title">Between Python and Performance</span></li>
@@ -370,7 +370,7 @@ RWBC-OILでは、民間企業と密接に連携し共同研究や技術移転を
                         <li><span class="presentation-speaker">Rikuto Kubota</span>, <span class="presentation-title">Development of efficient protein-ligand docking method for virtual screening by reuse of fragments</span></li>
                         <li><span class="presentation-speaker">Hiroki Watanabe</span>, <span class="presentation-title">MEGADOCK-Web-Mito: a database of computer-predicted mitochondrial protein-protein interactions</span></li>
                         <li><span class="presentation-speaker">Toshitaka Tanebe</span>, <span class="presentation-title">Machine learning based compound activity prediction using binding pocket information</span></li>
-                    </ul>
+                    </ol>
 		</div>
 	    </div>
 	</div>
