Update member list

--- a/index-en.html
+++ b/index-en.html
@@ -237,8 +237,9 @@
 					  Rio Yokota (Associate Professor, TokyoTech)<br>
 					  Akira Nukada (Associate Professor, TokyoTech)<br>
 					  Hideyuki Jitsumoto (Assistant Professor, TokyoTech)<br>
+					  Akihiro Nomura (Assistant Professor, TokyoTech)<br>
 					  Satoshi Matsuoka (Specially Appointed Professor, TokyoTech)<br>
-					  Katsuki Fujisawa (Visiting Professor, TokyoTech)<br>
+					  Katsuki Fujisawa (Cross-appointment Fellow, AIST)<br>
 					  Hirotaka Ogawa (Research Leader, AIST)<br>
 					  Kuniyasu Suzaki (Senior Researcher, AIST)<br>
 					  Takahiro Hirofuchi (Senior Researcher, AIST)<br>
@@ -250,7 +251,7 @@
 					  Shinichi Miura (Specially Appointed Assistant Professor, TokyoTech / Visiting Researcher, AIST)<br>
 					  Koichi Hagishima (Visiting Researcher, AIST)<br>
 					  Atsushi Sasaki (Visiting Researcher, AIST)<br>
-					  Jun Miyazaki (Visiting Researcher, AIST)
+					  Tetsuo Fukunaga (Visiting Researcher, AIST)
 					</p>
 
 					<h3>Real World Big Data/AI Applications Research Team</h3>
