--- a/index.html
+++ b/index.html
@@ -216,12 +216,13 @@
 					<h3>実社会HPC班</h3>
 					<p class="lead">
             班長 <a href="https://www.itri.aist.go.jp/cpc/researcher/takano.html">高野 了成 </a>（産総研 研究グループ長)<br><br>
-					  遠藤 敏夫 教授（東工大）<br>
-					  横田 理央 准教授（東工大）<br>
-					  額田 彰 准教授（東工大）<br>
-					  實本 英之 助教（東工大）<br>
-					  松岡 聡 特任教授（東工大）<br>
-					  藤澤 克樹 特定教授（東工大）<br>
+					  遠藤 敏夫（東工大 教授）<br>
+					  横田 理央（東工大 准教授）<br>
+					  額田 彰（東工大 准教授）<br>
+					  實本 英之（東工大 助教）<br>
+					  野村 哲弘（東工大 助教）<br>
+					  松岡 聡（東工大 特任教授）<br>
+					  藤澤 克樹（産総研 クロスアポイントメントフェロー）<br>
 					  小川 宏高（産総研 研究チーム長）<br>
 					  須崎 有康（産総研 主任研究員）<br>
 					  広渕 崇宏（産総研 主任研究員）<br>
@@ -233,24 +234,24 @@
 					  三浦 信一（産総研 招聘研究員）<br>
 					  萩島 功一（産総研 招聘研究員）<br>
 					  佐々木 淳（産総研 招聘研究員）<br>
-					  宮﨑 淳（産総研 客員研究員）
+					  福永 哲雄（産総研 招聘研究員）
 					</p>
 
 					<h3>データ活用班</h3>
 					<p class="lead">
 					  班長 小川 宏高（産総研 研究チーム長）<br><br>
-					  篠田 浩一 教授（東工大）<br>
-					  村田 剛志 准教授（東工大）<br>
-					  井上 中順 助教（東工大）<br>
+					  篠田 浩一（東工大 教授）<br>
+					  村田 剛志（東工大 准教授）<br>
+					  井上 中順（東工大 助教）<br>
 					  中村 良介（産総研 研究チーム長）<br>
 					  李時旭（産総研 主任研究員）<br>
 					  Poliyapram Vinayaraj（産総研 特別研究員）
 					</p>
 
 					<p class="lead">
-					  高安 美佐子 教授（東工大）<br>
-					  出口 弘 教授（東工大）<br>
-					  小野 功 准教授（東工大）<br>
+					  高安 美佐子（東工大 教授）<br>
+					  出口 弘（東工大 教授）<br>
+					  小野 功（東工大 准教授）<br>
 					  本村 陽一（産総研 首席研究員）<br>
 					  櫻井 瑛一（産総研 研究員）<br>
 					  寺野 隆雄（産総研 招聘研究員）<br>
@@ -258,11 +259,11 @@
 					</p>
 
 					<p class="lead">
-					  秋山 泰 教授（東工大）<br>
-					  山田 拓司 准教授（東工大）<br>
-					  石田 貴士 准教授（東工大）<br>
-					  大上 雅史 助教（東工大）<br>
-					  関嶋 政和 研究ユニットリーダー（東工大）<br>
+					  秋山 泰（東工大 教授）<br>
+					  山田 拓司（東工大 准教授）<br>
+					  石田 貴士（東工大 准教授）<br>
+					  大上 雅史（東工大 助教）<br>
+					  関嶋 政和（東工大 准教授）<br>
 					  瀬々 潤（産総研 研究チーム長）<br>
 					  富井 健太郎（産総研 研究チーム長）<br>
 					  永田 賢二（産総研 主任研究員）<br>
@@ -270,7 +271,7 @@
 					</p>
 
 					<p class="lead">
-					  岡崎 直観 教授（東工大）<br>
+					  岡崎 直観（東工大 教授）<br>
 					  高村 大也（産総研 研究チーム長）
 					</p>
 				</div>
