Updated lab leader

--- a/index-en.html
+++ b/index-en.html
@@ -216,7 +216,7 @@
 						<tr>
 							<td>RWBC-OIL Director</td>
 							<td>　</td>
-							<td>Kazuhito Yokoi (Research Strategy Director, AIST)<!--a href="#" class="btn btn-warning">ラボ長挨拶</a--></td>
+							<td>Katsuki Fujisawa (Joint Research Fellow, AIST)<!--a href="#" class="btn btn-warning">ラボ長挨拶</a--></td>
 						</tr>
 						<tr>
 							<td>RWBC-OIL Deputy Director</td><td></td>
@@ -239,7 +239,7 @@
 					  Hideyuki Jitsumoto (Assistant Professor, TokyoTech)<br>
 					  Akihiro Nomura (Assistant Professor, TokyoTech)<br>
 					  Satoshi Matsuoka (Specially Appointed Professor, TokyoTech)<br>
-					  Katsuki Fujisawa (Cross-appointment Fellow, AIST)<br>
+					  Katsuki Fujisawa (Joint Research Fellow, AIST)<br>
 					  Hirotaka Ogawa (Research Leader, AIST)<br>
 					  Kuniyasu Suzaki (Senior Researcher, AIST)<br>
 					  Takahiro Hirofuchi (Senior Researcher, AIST)<br>
