--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en"><head>
 
@@ -208,7 +209,7 @@
             <div class="row">
 				 <div class="col-md-12">
 					<!--p class="lead">RWBC-OIL ラボ長　松岡 聡（東京工業大学 教授）<a href="#" class="btn btn-warning">ラボ長挨拶</a><br-->
-					<p class="lead">RWBC-OIL ラボ長　横井 一仁（産業技術総合研究所 研究戦略部長）<!--a href="#" class="btn btn-warning">ラボ長挨拶</a--><br>
+					<p class="lead">RWBC-OIL ラボ長　藤澤 克樹（産業技術総合研究所 特定フェロー）<!--a href="#" class="btn btn-warning">ラボ長挨拶</a--><br>
 					RWBC-OIL 副ラボ長　小川 宏高（産業技術総合研究所 研究チーム長）<br>
 					RWBC-OIL 副ラボ長　遠藤 敏夫（東京工業大学 教授）</p>
 
@@ -222,7 +223,7 @@
 					  實本 英之（東工大 助教）<br>
 					  野村 哲弘（東工大 助教）<br>
 					  松岡 聡（東工大 特任教授）<br>
-					  藤澤 克樹（産総研 クロスアポイントメントフェロー）<br>
+					  藤澤 克樹（産総研 特定フェロー）<br>
 					  小川 宏高（産総研 研究チーム長）<br>
 					  須崎 有康（産総研 主任研究員）<br>
 					  広渕 崇宏（産総研 主任研究員）<br>
