Updated ISC18 page

--- a/events/20180624-isc18/index.html
+++ b/events/20180624-isc18/index.html
@@ -117,9 +117,20 @@
         </p>
 
         <h4>Posters</h4>
-        <p class="indent-block lead">
-          [TODO] Show 6 posters in a 2x3 table.
-        </p>
+        <table border="1" class="lead">
+          <tr>
+            <td style="padding:10px;"><a href="./poster00.pdf" target="_blank"><img src="./poster00.png" alt="ABCI No.1"></a><br>ABCI No.1</td>
+            <td style="padding:10px;"><a href="./poster01.pdf" target="_blank"><img src="./poster00.png" alt="ABCI No.2"></a><br>ABCI No.2</td>
+          </tr>
+          <tr>
+            <td style="padding:10px;"><a href="./poster02.pdf" target="_blank"><img src="./poster00.png" alt="TokyoTech TSUBAME"></a><br>TokyoTech Tsubame</td>
+            <td style="padding:10px;"><a href="./poster03.pdf" target="_blank"><img src="./poster00.png" alt="RWBC-OIL No.1"></a><br>RWBC-OIL No.1</td>
+          </tr>
+          <tr>
+            <td style="padding:10px;"><a href="./poster04.pdf" target="_blank"><img src="./poster00.png" alt="RWBC-OIL No.2"></a><br>RWBC-OIL No.2</td>
+            <td style="padding:10px;"><a href="./poster05.pdf" target="_blank"><img src="./poster00.png" alt="RWBC-OIL No.3"></a><br>RWBC-OIL No.3</td>
+          </tr>
+        </table>
 
         <h3>Presentations</h3>
         <h4>Research Poster</h4>
@@ -129,7 +140,7 @@
         <p class="indent-block lead">
           <span class="presentation-title"><a href="https://2018.isc-program.com/?page_id=10&id=post109&sess=sess113" target="_blank">(RP16) HuronFS : Hierarchical, User-level and On-demand Burst Buffer File System</a></span><br>
           <span class="presentation-speaker">Tianqi Xu, Kento Sato, Satoshi Matsuoka</span><br>
-          Date: TimeTuesday, June 26th8:30am - 10am<br>
+          Date: Tuesday, June 26th 8:30am - 10am<br>
           Location: Substanz 1, 2
         </p>
 
@@ -138,10 +149,10 @@
           Dr. Sato will give an inivited talk about ABCI in <a href="http://nowlab.cse.ohio-state.edu/exacomm/" target="_blank">ExaComm 2018 workshop</a>.
         </p>
         <p class="indent-block lead">
-          Title: TBD<br>
+          Title: ABCI: AI Bridging Cloud Infrastructure for Scalable AI/Big Data<br>
           Speaker: Dr. Hitoshi Sato<br>
-          Date: TBD<br>
-          Location: TBD
+          Date: Thursday, June 28th 12:00pm - 12:30pm<br>
+          Location: Basalt
         </p>
 
 
